log
bidding_system.c: In function ‘main’:
bidding_system.c:40:9: error: expected ‘}’ before ‘else’
         else{    /* parent */
         ^
bidding_system.c: At top level:
bidding_system.c:48:5: warning: data definition has no type or storage class
     fpr = fopen(argv[1], "r");
     ^
bidding_system.c:48:5: warning: type defaults to ‘int’ in declaration of ‘fpr’ [-Wimplicit-int]
bidding_system.c:48:5: error: conflicting types for ‘fpr’
bidding_system.c:46:11: note: previous declaration of ‘fpr’ was here
     FILE *fpr;
           ^
bidding_system.c:48:17: error: ‘argv’ undeclared here (not in a function)
     fpr = fopen(argv[1], "r");
                 ^
bidding_system.c:49:5: warning: data definition has no type or storage class
     fpw = fopen("./bidding_system_log", "r");
     ^
bidding_system.c:49:5: warning: type defaults to ‘int’ in declaration of ‘fpw’ [-Wimplicit-int]
bidding_system.c:49:5: error: conflicting types for ‘fpw’
bidding_system.c:47:11: note: previous declaration of ‘fpw’ was here
     FILE *fpw;
           ^
bidding_system.c:49:11: warning: initialization makes integer from pointer without a cast [-Wint-conversion]
     fpw = fopen("./bidding_system_log", "r");
           ^
bidding_system.c:49:11: error: initializer element is not constant
bidding_system.c:50:5: warning: data definition has no type or storage class
     fclose(fpr);
     ^
bidding_system.c:50:5: warning: type defaults to ‘int’ in declaration of ‘fclose’ [-Wimplicit-int]
bidding_system.c:50:5: warning: parameter names (without types) in function declaration
bidding_system.c:51:5: warning: data definition has no type or storage class
     fclose(fpw);
     ^
bidding_system.c:51:5: warning: type defaults to ‘int’ in declaration of ‘fclose’ [-Wimplicit-int]
bidding_system.c:51:5: warning: parameter names (without types) in function declaration
bidding_system.c:53:5: error: expected identifier or ‘(’ before ‘return’
     return 0;
     ^
bidding_system.c:54:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
make: *** [all] Error 1
